# tt-resonix

./: .gitattributes  .gitignore  .gitmodules  README.md  config.json  requirements.txt
config/: config_acoustic_1st_ord_2d.json  perf_baseline.json
docs/: performance_acoustic_2d.md
fdtd/cpp/: CMakeLists.txt  fdtd2d_cpu.cpp  fdtd2d_cpu_mt.cpp  fdtd2d_cuda.cu
fdtd/cpp/inc/common/: config.hpp  sim.hpp
fdtd/cpp/src/common/: config.cpp  sim.cpp
fdtd/python/: acoustic_1st_ord_2d.py  acoustic_1st_ord_2d_v2.py  acoustic_2nd_ord_2d.py  fdtd2d.py
gt/acoustic_1st_ord_2d/0/: wavefield.npz
gt/acoustic_1st_ord_2d/cpu/0/: config.json  wavefield.npz
gt/acoustic_1st_ord_2d/cpu/1/: config.json  wavefield.npz
gt/acoustic_1st_ord_2d/numpy/1/: wavefield.npz
tools/: common.py  gen_obstacle.py  gen_rho_circle.py  print_max_diff.py  run_benchmark.py  viz_function.py  viz_max_diff.py  viz_python_sim.py  viz_sim.py
